<resources>
    <string translatable="false" name="app_name">MovieInfo</string>
    <string name="empty_list_message">The list is empty</string>
    <string translatable="false" name="title_movie_detail">Movie Detail</string>
    <string translatable="false" name="action_settings">Settings</string>
    <string  translatable="false" name="search">search</string>
    <string translatable="false" name="by_default">System language</string>
    <string translatable="false" name="russian">Russian</string>
    <string translatable="false" name="english">English</string>
    <string name="select_language">Select Language</string>
    <string name="summary_lp">Choose language of application</string>
    <string translatable="false" name="languagePref">downloadType</string>
    <string translatable="false" name="def_value">def</string>
    <string name="release_date">Release date :</string>
    <string name="original_language">Original language</string>
    <string name="vote_count">Vote count</string>
    <string name="vote_average">Vote average</string>
    <string name="budget">Budget</string>
    <string name="adults_only">Adults only</string>
    <string name="original_title">Original title</string>
    <string name="popularity">Rating</string>
    <string name="revenue">Revenue</string>
    <string name="status">Status</string>
    <string name="tagline">tagline</string>
    <string name="genres">Genre</string>
    <string name="productionCompanies">Produced</string>
    <string name="productionCountries">Country</string>
    <string name="description">Description</string>
    <string name="clear_cache">Clear cache</string>
    <string name="change_language">change language</string>
    <string name="cache_cleared">Cache cleared!</string>
    <string name="settings_title">Settings</string>
    <string translatable="false" name="cc_pref">clear_cache</string>
    <string name="settings">Settings</string>
    <string name="lang">Language</string>
    <string name="mes1">Please, install application for watching Youtube video !</string>
</resources>
